--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -39,3 +39,5 @@ entries:
     replaces: eclipse-che.v7.64.0
   - name: eclipse-che.v7.66.0
     replaces: eclipse-che.v7.65.0
+  - name: eclipse-che.v7.67.0
+    replaces: eclipse-che.v7.66.0
