feat: Set empty CPU limits when possible
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che/manifests/che-operator.clusterserviceversion.yaml
@@ -866,6 +866,12 @@ spec:
                 - delete
                 - update
                 - use
+            - apiGroups:
+                - ""
+              resources:
+                - limitranges
+              verbs:
+                - list
           serviceAccountName: che-operator
       deployments:
         - name: che-operator
