--- a/config/rbac/cluster_role.yaml
+++ b/config/rbac/cluster_role.yaml
@@ -403,3 +403,9 @@ rules:
       - delete
       - update
       - use
+  - apiGroups:
+      - ""
+    resources:
+      - limitranges
+    verbs:
+      - list
