--- a/helmcharts/stable/templates/che-operator.ClusterRole.yaml
+++ b/helmcharts/stable/templates/che-operator.ClusterRole.yaml
@@ -232,11 +232,7 @@ rules:
   resources:
   - ingresses
   verbs:
-  - list
-  - create
-  - watch
-  - get
-  - delete
+  - '*'
 - apiGroups:
   - apiextensions.k8s.io
   resources:
@@ -403,3 +399,9 @@ rules:
   - delete
   - update
   - use
+- apiGroups:
+  - ""
+  resources:
+  - limitranges
+  verbs:
+  - list
