ci: Add new bundle to a catalog
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -41,3 +41,5 @@ entries:
     replaces: eclipse-che.v7.65.0
   - name: eclipse-che.v7.67.0
     replaces: eclipse-che.v7.66.0
+  - name: eclipse-che.v7.68.0
+    replaces: eclipse-che.v7.67.0
