feat: Devfile improvements
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,12 +3,7 @@
     "tasks": [
         {
             "label": "Compile Che operator code",
-            "command": "make compile",
-            "options": {
-                "env": {
-                    "ARCH": "amd64"
-                }
-            },
+            "command": "make build",
             "type": "shell",
             "args": [],
             "problemMatcher": [
