--- a/devfile.yaml
+++ b/devfile.yaml
@@ -29,32 +29,70 @@ components:
           value: /home/user/go
         - name: GOCACHE
           value: /tmp/.cache
+        - name: IMAGE_TOOL
+          value: podman
 commands:
+  - id: install-go-1-18
+    exec:
+      label: POST START EVENT - Install go 1.18
+      component: tooling-container
+      commandLine: |
+        cd /tmp && wget https://go.dev/dl/go1.18.6.linux-amd64.tar.gz && \
+        mkdir $HOME/go1.18 && \
+        tar -xvzf go1.18.6.linux-amd64.tar.gz -C $HOME/go1.18 --strip-components 1 && \
+        if ! grep -q "export PATH=\$HOME/chectl/bin:\$PATH" $HOME/.bashrc; then echo "export PATH=\$HOME/chectl/bin:\$PATH" >> $HOME/.bashrc; fi
+  - id: install-chectl
+    exec:
+      label: POST START EVENT - Install chectl
+      component: tooling-container
+      commandLine: |
+        tag=$(curl https://api.github.com/repos/che-incubator/chectl/tags | jq -r '.[0].name') && \
+        cd /tmp && wget https://github.com/che-incubator/chectl/releases/download/${tag}/chectl-linux-x64.tar.gz && \
+        mkdir $HOME/chectl && \
+        tar -xvzf chectl-linux-x64.tar.gz -C $HOME/chectl --strip-components 1 && \
+        if ! grep -q "export PATH=\$HOME/chectl/bin:\$PATH" $HOME/.bashrc; then echo "export PATH=\$HOME/chectl/bin:\$PATH" >> $HOME/.bashrc; fi
+  - id: install-goimports
+    exec:
+      label: POST START EVENT - Install goimports
+      component: tooling-container
+      commandLine: |
+        go install golang.org/x/tools/cmd/goimports@v0.9.2 && \
+        if ! grep -q "PATH=\$PATH:\$GOPATH/bin" $HOME/.bashrc; then echo "export PATH=\$PATH:\$GOPATH/bin" >> $HOME/.bashrc; fi
+  - id: install-git-autocompletion
+    exec:
+      label: POST START EVENT - Install git autocompletion
+      component: tooling-container
+      commandLine: if ! grep -q "source /usr/share/bash-completion/completions/git" $HOME/.bashrc; then echo "source /usr/share/bash-completion/completions/git" >> $HOME/.bashrc; fi
   - id: go-build
     exec:
-      label: 1. Build Eclipse Che Operator binary
+      label: Build Eclipse Che Operator binary
       component: tooling-container
       commandLine: make build
   - id: go-run
     exec:
-      label: 2. Run Eclipse Che Operator
+      label: Run Eclipse Che Operator
       component: tooling-container
       commandLine: make run
+  - id: go-test
+    exec:
+      label: Run unit tests
+      component: tooling-container
+      commandLine: make test      
   - id: go-debug
     exec:
-      label: 3. Run and debug Eclipse Che Operator
+      label: Run and debug Eclipse Che Operator
       component: tooling-container
       commandLine: make debug
-  - id: bundle
+  - id: update-dev-resources
     exec:
-      label: 4. Generate OLM bundle for next channel
+      label: Update all development resources
       component: tooling-container
-      commandLine: CHANNEL=next make bundle
-  - id: docker-build-push
-    exec:
-      label: 5. Build and push Eclipse Che Operator container image
-      component: tooling-container
-      commandLine: >
-        read -p "ENTER the image registry (for example \"quay.io\"): " IMAGE_REGISTRY_HOST &&
-        read -p "ENTER the image organization (for example \"eclipse\"): " IMAGE_REGISTRY_USER_NAME &&
-        IMAGE_TOOL=podman make docker-build docker-push IMG="${IMAGE_REGISTRY_HOST}/${IMAGE_REGISTRY_USER_NAME}/che-operator:next"
+      commandLine: make update-dev-resources      
+events:
+  postStart:
+    - install-go-1-18
+    - install-chectl
+    - install-goimports
+    - install-git-autocompletion
+
+
