--- a/devfile.yaml
+++ b/devfile.yaml
@@ -40,7 +40,7 @@ commands:
         cd /tmp && wget https://go.dev/dl/go1.18.6.linux-amd64.tar.gz && \
         mkdir $HOME/go1.18 && \
         tar -xvzf go1.18.6.linux-amd64.tar.gz -C $HOME/go1.18 --strip-components 1 && \
-        if ! grep -q "export PATH=\$HOME/chectl/bin:\$PATH" $HOME/.bashrc; then echo "export PATH=\$HOME/chectl/bin:\$PATH" >> $HOME/.bashrc; fi
+        if ! grep -q "export PATH=\$HOME/go1.18/bin:\$PATH" $HOME/.bashrc; then echo "export PATH=\$HOME/go1.18/bin:\$PATH" >> $HOME/.bashrc; fi
   - id: install-chectl
     exec:
       label: POST START EVENT - Install chectl
@@ -56,7 +56,7 @@ commands:
       label: POST START EVENT - Install goimports
       component: tooling-container
       commandLine: |
-        go install golang.org/x/tools/cmd/goimports@v0.9.2 && \
+        $HOME/go1.18/bin/go install golang.org/x/tools/cmd/goimports@v0.9.2 && \
         if ! grep -q "PATH=\$PATH:\$GOPATH/bin" $HOME/.bashrc; then echo "export PATH=\$PATH:\$GOPATH/bin" >> $HOME/.bashrc; fi
   - id: install-git-autocompletion
     exec:
