--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -89,7 +89,7 @@ jobs:
           mkdir -p $OP_SDK_DIR
           make download-operator-sdk DEST="${OP_SDK_DIR}"
           
-          go install golang.org/x/tools/cmd/goimports@v0.9.2
+          go install golang.org/x/tools/cmd/goimports@latest
 
           export PATH="$PATH:$OP_SDK_DIR"
           export QUAY_ECLIPSE_CHE_USERNAME=${{ secrets.QUAY_USERNAME }}
