--- a/.github/workflows/resources-check-main.yml
+++ b/.github/workflows/resources-check-main.yml
@@ -29,7 +29,7 @@ jobs:
         go-version: 1.18
     - name: Validate operator resources
       run: |
-        go install golang.org/x/tools/cmd/goimports@v0.9.2
+        go install golang.org/x/tools/cmd/goimports@latest
         ${GITHUB_WORKSPACE}/build/scripts/check-resources.sh
   bundle-version-validation:
     runs-on: ubuntu-22.04
