--- a/devfile.yaml
+++ b/devfile.yaml
@@ -32,7 +32,7 @@ components:
         - name: IMAGE_TOOL
           value: podman
         - name: KUBECONFIG
-          value: /home/user/.kube/config
+          value: $(HOME)/.kube/config
 commands:
   - id: install-go-1-18
     exec:
