--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -8,8 +8,6 @@
 #
 # Contributors:
 #   Red Hat, Inc. - initial API and implementation
-#
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -39,7 +37,7 @@ spec:
     spec:
       containers:
         - name: che-operator
-          image: quay.io/eclipse/che-operator:next
+          image: quay.io/eclipse/che-operator:7.70.0
           command:
             - /manager
           args:
@@ -60,15 +58,15 @@ spec:
             - name: OPERATOR_NAME
               value: che-operator
             - name: CHE_VERSION
-              value: next
+              value: 7.70.0
             - name: RELATED_IMAGE_che_server
-              value: quay.io/eclipse/che-server:next
+              value: quay.io/eclipse/che-server:7.70.0
             - name: RELATED_IMAGE_dashboard
-              value: quay.io/eclipse/che-dashboard:next
+              value: quay.io/eclipse/che-dashboard:7.70.0
             - name: RELATED_IMAGE_plugin_registry
-              value: quay.io/eclipse/che-plugin-registry:next
+              value: quay.io/eclipse/che-plugin-registry:7.70.0
             - name: RELATED_IMAGE_devfile_registry
-              value: quay.io/eclipse/che-devfile-registry:next
+              value: quay.io/eclipse/che-devfile-registry:7.70.0
             - name: RELATED_IMAGE_che_tls_secrets_creation_job
               value: quay.io/eclipse/che-tls-secret-creator:alpine-01a4c34
             - name: RELATED_IMAGE_single_host_gateway
@@ -102,7 +100,8 @@ spec:
             - name: CHE_DEFAULT_SPEC_DEVENVIRONMENTS_DEFAULTEDITOR
               value: che-incubator/che-code/latest
             - name: CHE_DEFAULT_SPEC_DEVENVIRONMENTS_DEFAULTCOMPONENTS
-              value: '[{"name": "universal-developer-image", "container": {"image": "quay.io/devfile/universal-developer-image:ubi8-latest"}}]'
+              value: '[{"name": "universal-developer-image", "container": {"image":
+                "quay.io/devfile/universal-developer-image:ubi8-latest"}}]'
             - name: CHE_DEFAULT_SPEC_COMPONENTS_PLUGINREGISTRY_OPENVSXURL
               value: https://open-vsx.org
             - name: CHE_DEFAULT_SPEC_DEVENVIRONMENTS_DISABLECONTAINERBUILDCAPABILITIES
