--- a/.github/workflows/release-next-catalog-and-operator-image.yaml
+++ b/.github/workflows/release-next-catalog-and-operator-image.yaml
@@ -22,7 +22,7 @@ on:
     branches:
       - main
 jobs:
-  build-catalog:
+  build-operator-image:
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout source code
@@ -46,32 +46,36 @@ jobs:
           platforms: linux/amd64,linux/ppc64le
           push: true
           tags: quay.io/eclipse/che-operator:next
+  build-catalog:
+    runs-on: ubuntu-22.04
+    needs: build-operator-image
+    steps:
+      - name: Checkout source code
+        uses: actions/checkout@v3
+      - name: Install yq
+        run: sudo pip install yq
+      - name: Login to quay.io
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.QUAY_USERNAME }}
+          password: ${{ secrets.QUAY_PASSWORD }}
+          registry: quay.io
       - name: Build catalog source
         run: ${GITHUB_WORKSPACE}/build/scripts/olm/release-catalog.sh --channel 'next' --catalog-image quay.io/eclipse/eclipse-che-olm-catalog:next
   build-catalog-with-digest:
     runs-on: ubuntu-22.04
+    needs: build-operator-image
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
       - name: Install yq
         run: sudo pip install yq
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
       - name: Login to quay.io
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.QUAY_USERNAME }}
           password: ${{ secrets.QUAY_PASSWORD }}
           registry: quay.io
-      - name: Build operator image
-        uses: docker/build-push-action@v3
-        with:
-          file: Dockerfile
-          platforms: linux/amd64,linux/ppc64le
-          push: true
-          tags: quay.io/eclipse/che-operator:next
       - name: Build catalog source
         run: |
           ${GITHUB_WORKSPACE}/build/scripts/release/addDigests.sh -s $(make csv-path CHANNEL=next) -t next
