feat: Customize dashboard logo
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
@@ -4369,6 +4369,21 @@ spec:
                       description: Configuration settings related to the dashboard
                         used by the Che installation.
                       properties:
+                        branding:
+                          description: Dashboard branding resources.
+                          properties:
+                            logo:
+                              description: Dashboard logo.
+                              properties:
+                                base64data:
+                                  type: string
+                                mediatype:
+                                  type: string
+                              required:
+                                - base64data
+                                - mediatype
+                              type: object
+                          type: object
                         deployment:
                           description: Deployment override options.
                           properties:
