ci: Add new bundle to a catalog
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -47,3 +47,5 @@ entries:
     replaces: eclipse-che.v7.68.0
   - name: eclipse-che.v7.70.0
     replaces: eclipse-che.v7.69.0
+  - name: eclipse-che.v7.71.0
+    replaces: eclipse-che.v7.70.0
