--- a/deploy/deployment/openshift/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
+++ b/deploy/deployment/openshift/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
@@ -6829,6 +6829,17 @@ spec:
                     description: The node selector limits the nodes that can run the
                       workspace pods.
                     type: object
+                  persistUserHome:
+                    description: PersistUserHome defines configuration options for
+                      persisting the user home directory in workspaces.
+                    properties:
+                      enabled:
+                        description: Determines whether the user home directory in
+                          workspaces should persist between workspace shutdown and
+                          startup. Must be used with the 'per-user' or 'per-workspace'
+                          PVC strategy in order to take effect. Disabled by default.
+                        type: boolean
+                    type: object
                   podSchedulerName:
                     description: Pod scheduler for the workspace pods. If not specified,
                       the pod scheduler is set to the default scheduler on the cluster.
