ci: Add new bundle to a catalog
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -49,3 +49,5 @@ entries:
     replaces: eclipse-che.v7.69.0
   - name: eclipse-che.v7.71.0
     replaces: eclipse-che.v7.70.0
+  - name: eclipse-che.v7.72.0
+    replaces: eclipse-che.v7.71.0
