--- a/deploy/deployment/kubernetes/objects/che-operator.Deployment.yaml
+++ b/deploy/deployment/kubernetes/objects/che-operator.Deployment.yaml
@@ -101,6 +101,9 @@ spec:
           value: https://open-vsx.org
         - name: CHE_DEFAULT_SPEC_DEVENVIRONMENTS_DISABLECONTAINERBUILDCAPABILITIES
           value: "false"
+        - name: CHE_DEFAULT_SPEC_DEVENVIRONMENTS_CONTAINERSECURITYCONTEXT
+          value: '{"allowPrivilegeEscalation": true,"capabilities": {"add": ["SETGID",
+            "SETUID"]}}'
         image: quay.io/eclipse/che-operator:next
         imagePullPolicy: Always
         livenessProbe:
