--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -51,3 +51,5 @@ entries:
     replaces: eclipse-che.v7.70.0
   - name: eclipse-che.v7.72.0
     replaces: eclipse-che.v7.71.0
+  - name: eclipse-che.v7.73.0
+    replaces: eclipse-che.v7.72.0
