Update kube-rbac-proxy level description
Signed-off-by: dkwon17 <dakwon@redhat.com>

--- a/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
@@ -8166,9 +8166,9 @@ spec:
                               type: object
                             kubeRbacProxyLogLevel:
                               default: 0
-                              description: The glog log level for the kube-rbac-proxy
-                                container within the gateway pod.  The default value
-                                is `0`.
+                              description: The k8s.io/klog/v2 log level for the kube-rbac-proxy
+                                container within the gateway pod. Larger values represent
+                                a higher verbosity. The default value is `0`.
                               format: int32
                               type: integer
                             traefikLogLevel:
