ci: Add new bundle to a catalog
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -53,3 +53,5 @@ entries:
     replaces: eclipse-che.v7.71.0
   - name: eclipse-che.v7.73.0
     replaces: eclipse-che.v7.72.0
+  - name: eclipse-che.v7.74.0
+    replaces: eclipse-che.v7.73.0
