Add attributes to set gateway container log level in Che CR (#1748)
feat: set traefik and kube-rbac-proxy log level in CR

Signed-off-by: dkwon17 <dakwon@redhat.com>
Co-authored-by: Anatolii Bazko <abazko@redhat.com>

--- a/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
@@ -8164,6 +8164,39 @@ spec:
                                       type: integer
                                   type: object
                               type: object
+                            kubeRbacProxy:
+                              description: Configuration for kube-rbac-proxy within
+                                the Che gateway pod.
+                              properties:
+                                logLevel:
+                                  default: 0
+                                  description: The glog log level for the kube-rbac-proxy
+                                    container within the gateway pod. Larger values
+                                    represent a higher verbosity. The default value
+                                    is `0`.
+                                  format: int32
+                                  minimum: 0
+                                  type: integer
+                              type: object
+                            traefik:
+                              description: Configuration for Traefik within the Che
+                                gateway pod.
+                              properties:
+                                logLevel:
+                                  default: INFO
+                                  description: 'The log level for the Traefik container
+                                    within the gateway pod: `DEBUG`, `INFO`, `WARN`,
+                                    `ERROR`, `FATAL`, or `PANIC`. The default value
+                                    is `INFO`'
+                                  enum:
+                                    - DEBUG
+                                    - INFO
+                                    - WARN
+                                    - ERROR
+                                    - FATAL
+                                    - PANIC
+                                  type: string
+                              type: object
                           type: object
                         identityProviderURL:
                           description: Public URL of the Identity Provider server.
