chore: Configure Dashboard log level
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che/manifests/org.eclipse.che_checlusters.yaml
@@ -4623,6 +4623,18 @@ spec:
                               description: Warning message displayed on the user dashboard.
                               type: string
                           type: object
+                        logLevel:
+                          default: ERROR
+                          description: The log level for the Dashboard.
+                          enum:
+                            - DEBUG
+                            - INFO
+                            - WARN
+                            - ERROR
+                            - FATAL
+                            - TRACE
+                            - SILENT
+                          type: string
                       type: object
                     devWorkspace:
                       description: DevWorkspace Operator configuration.
