--- a/.github/workflows/release-che-docs.yml
+++ b/.github/workflows/release-che-docs.yml
@@ -37,6 +37,11 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - name: Set up environment
+        run: |
+          sudo apt-get update -y || true
+          sudo apt-get -y -q install curl bash git hub
+          hub --version
       - name: Set up Python 3.9
         uses: actions/setup-python@v4
         with:
@@ -47,7 +52,6 @@ jobs:
           pip install yq
       - name: Release che docs PRs
         run: |
-          hub version
           git config --global user.name "Mykhailo Kuznietsov"
           git config --global user.email "mkuznets@redhat.com"
           export GITHUB_TOKEN=${{ secrets.CHE_BOT_GITHUB_TOKEN }}
