Fix: Changing scripts to use gh instead of hub for Che #22646

--- a/.github/workflows/release-che-docs.yml
+++ b/.github/workflows/release-che-docs.yml
@@ -40,8 +40,7 @@ jobs:
       - name: Set up environment
         run: |
           sudo apt-get update -y || true
-          sudo apt-get -y -q install curl bash git hub
-          hub --version
+          sudo apt-get -y -q install curl bash git
       - name: Set up Python 3.9
         uses: actions/setup-python@v4
         with:
